# psilbhb

./: .gitignore  LICENSE.txt  MANIFEST.in  pyproject.toml  setup.cfg  setup.py
psilbhb/: stim.py
psilbhb/app/: celldb.py  launcher.py  launcher_view.enaml
psilbhb/config/psi/io/: badger.enaml  weasel.enaml
psilbhb/config/psi/layout/AMF/: default.layout
psilbhb/config/psi/layout/CAT/: default.layout
psilbhb/config/psi/layout/NFB/: 2afcwithbg.layout  default - Copy.layout  default.layout
psilbhb/config/psi/layout/NFB-passive/: default.layout
psilbhb/config/psi/layout/NTD-gonogo-np/: default.layout
psilbhb/config/psi/layout/NTD-passive/: default.layout
psilbhb/config/psi/layout/VGN/: default.layout
psilbhb/config/psi/layout/VOW/: default.layout
psilbhb/config/psi/preferences/: celldblauncher.json
psilbhb/config/psi/preferences/AMF/: default.preferences
psilbhb/config/psi/preferences/CAT/: default.preferences  default_noise_test.preferences
psilbhb/config/psi/preferences/NFB/: default.preferences  diotic_only.preferences  fg_delay.preferences  training_step_1_Ling_BG.preferences  training_step_1_Ling_contra.preferences  training_step_1_R.preferences  training_step_1_R_contra.preferences  warmup - Reishi.preferences
psilbhb/config/psi/preferences/NFB-passive/: default.preferences
psilbhb/config/psi/preferences/NTD-gonogo-np/: 12-06-23-prefs.preferences  bignat_np.preferences  bignat_np_dual_bg.preferences  bignat_np_dual_bg_local.preferences  bignat_np_dual_bg_local_mono.preferences  bignat_np_initiated_mono.preferences  default.preferences  stinky_train.preferences
psilbhb/config/psi/preferences/NTD-passive/: default.preferences
psilbhb/config/psi/preferences/VGN/: EH.AE+noise.OO.EE.AH.preferences  EH.AE+noise.OO.EE.preferences  EH.AE+noise.OO.preferences  EH.AE+noise.preferences  EH.AE.106.151+OO.EE.AH.preferences  EH.AE.106.151+noise.OO.EE.AH.preferences  EH.AE.106.151.OO.106.151.EE.106.151.AH.106.preferences  EH.AE.106.151.noise.OO.106.151.EE.106.151.AH.106.preferences  EH.AE.EE.OO.106.151.AH.106.OG.preferences  EH.AE.EE.OO.AH.106.151.OG.preferences  (+1 more)
psilbhb/io/: badger.enaml
psilbhb/paradigms/: lbhb.py  openephys.enaml  video.enaml
psilbhb/paradigms/behavior/: behavior_1afc.enaml  behavior_2afc.enaml  behavior_2afc_plugin.py  behavior_NAFC.enaml  behavior_gonogo.enaml  behavior_mixins.enaml  behavior_nafc.enaml  behavior_nafc_plugin.py  fg_bg_engine.py  passive.enaml  passive_continuous.enaml  passive_continuous_plugin.py  passive_plugin.py  stimuli.enaml  wav_set_manifest.enaml
psilbhb/stim/: __init__.py  _bignat.enaml  _wav_set.enaml  bignat.enaml  bignat.py  test.py  test_nfb.py  test_script.py  test_script_CAT.py  test_script_NTD.py  test_vgn.py  wav_set.py
psilbhb/util/: celldb.py  flush_training.py  health2csv.py  plots.py  test_plot.py  time_plot.py
(+23 files in other folders)
