[project]
name = "psilbhb"
description = "Module for running LBHB experiments using psiexperiment framework"
requires-python = ">=3.7"
license = {file = "LICENSE.txt"}
authors = [
    {name = "Brad Buran", email="buran@ohsu.edu"},
    {name = "Stephen David", email="davids@ohsu.edu"},
]
maintainers = [
    {name = "Brad Buran", email="buran@ohsu.edu"},
    {name = "Stephen David", email="davids@ohsu.edu"},
]
dependencies = [
    "psiexperiment[ni,zarr-backend]",
]
dynamic = ["version"]

[project.optional-dependencies]
ephys = ["psiopenephys"]
video = ["psivideo"]

[build-system]
requires = ["setuptools>=61.2", "wheel", "setuptools_scm[toml]>=3.4.3"]
build-backend = "setuptools.build_meta"

[tool.setuptools_scm]
write_to = "psilbhb/version.py"
