[project]
name = "psilbhb"
description = "Module for running LBHB experiments using psiexperiment framework"
requires-python = ">=3.7"
license = {file = "LICENSE.txt"}
authors = [
    {name = "Brad Buran", email="buran@ohsu.edu"},
    {name = "Stephen David", email="davids@ohsu.edu"},
]
maintainers = [
    {name = "Brad Buran", email="buran@ohsu.edu"},
    {name = "Stephen David", email="davids@ohsu.edu"},
]
dependencies = [
	"enaml[qt6-pyside]",
    "psiexperiment[ni,zarr]",
    "psiopenephys",
    "psivideo",
    "pymysql",
    "sqlalchemy",
    "joblib",
]
dynamic = ["version"]

[project.scripts]
psi-celldb = "psilbhb.app.launcher:main_db"


[build-system]
requires = ["setuptools>=61.2", "wheel", "setuptools_scm[toml]>=3.4.3"]
build-backend = "setuptools.build_meta"

[tool.setuptools_scm]
write_to = "psilbhb/version.py"
