[metadata]
name = psilbhb
description = Module for running LBHB experiments using psiexperiment framework
url = https://github.com/lbhb/psilbhb
author = psilbhb development team
license = MIT
license_file = LICENSE.txt

[options]
include_package_data = True
packages = find:
install_requires =
    psiexperiment[ni,zarr]
    psiopenephys
    psivideo

[versioneer]
VCS = git
style = pep440
versionfile_source = psilbhb/_version.py
versionfile_build = psilbhb/_version.py
tag_prefix = v
